--- a/app/design/frontend/default/rooja/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view.phtml
@@ -378,7 +378,8 @@ echo '<span>' . $likes = $xml->link_stat->like_count . '</span>';
                type:     "POST",
                url:      "/rbanh?id=<?php echo $_product->getId(); ?>&url=<?php echo urlencode($_SERVER['REQUEST_URI']); ?>",
                dataType: "html",
-               success: function(x){
+			   success: function(x){
+				   console.log(x);
                 var newPrice = fbPriceJS - fbOffset;
 				 jQuery('#likeThis').find('span:last').text(function(i,txt) { return parseInt(txt, 10) + 1; });
 				 console.log("New price is: " + newPrice);
