--- a/app/design/frontend/default/rooja/template/checkout/cart/sidebar.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/cart/sidebar.phtml
@@ -75,7 +75,7 @@
         <p class="miniCartSubtotal">Cart Subtotal</p> <span class="miniCartSubtotalPrice"><?php echo Mage::helper('checkout')->formatPrice($this->getSubtotal()) ?></span>
         <?php if ($_subtotalInclTax = $this->getSubtotalInclTax()): ?>
             <br />(<?php echo Mage::helper('checkout')->formatPrice($_subtotalInclTax) ?> <?php echo Mage::helper('tax')->getIncExcText(true) ?>)
-        <?php endif; ?><br /><br /><a href="/" class="continueShoppingLink">Continue Shopping</a>
+        <?php endif; ?><br /><br /><a href="#" class="continueShoppingLink">Continue Shopping</a>
 <a href="/checkout/onepage/" id="checkoutBtn">Proceed to Checkout</a>
     </div>
 <div class="clear"></div>
@@ -100,7 +100,7 @@
 				return false;	
 			}
 			});*/
-		jQuery("#closerBtn").click(function() {
+		jQuery("#closerBtn, .continueShoppingLink").click(function() {
 			        jQuery("#sidebarCart").slideUp();
 			        return false;
 		});
