checkout and referral fix

--- a/app/design/frontend/default/rooja/template/checkout/onepage.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/onepage.phtml
@@ -59,7 +59,7 @@
 			$list.prepend('<option selected="selected" disabled="disabled">Choose one:</option>');
 			
 			$list.change(function(){
-				//billing.save();
+				billing.save();
 				if($('#shipping-new-address-form').is(":visible")){
 					$('#shippingSaveBtn').removeClass("btnPressed");
 					$('#shipping-new-address-form').removeClass("infoSubmitted");
