--- a/app/design/frontend/default/rooja/template/rewardsref/customer/referral/history.phtml
+++ b/app/design/frontend/default/rooja/template/rewardsref/customer/referral/history.phtml
@@ -3,7 +3,7 @@
    
 <?php if($this->showHistory()): ?>
 <br/><br/>    
-<h3 class="page-invite-head fl">Your Referrals</h3>
+<h3 class="page-invite-head">Your Referrals</h3>
 
 	<br>
 	
