checkout and referral fix

--- a/app/design/frontend/default/rooja/template/checkout/onepage.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/onepage.phtml
@@ -76,6 +76,10 @@
 			 $(this).addClass("btnPressed");
 			 $('#billing-new-address-form').addClass("infoSubmitted");
 			});
+			$("#billingSaveBtn2").click(function() {
+			 $(this).addClass("btnPressed");
+			 $('#billing-new-address-form').addClass("infoSubmitted");
+			});
 			
 			$("#billing-address-select").change(function() {
 			 if($('#billing-new-address-form').is(":visible")){
