checkout and referral fix

--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -1270,6 +1270,7 @@ h3 .product-name {font-family:helvetica, arial, sans-serif; font-size:12px;}
 
 
 .rewardsref_plaxo_link_caption {padding:10px 0;}
+.points_slider_msg{font-size:12px;margin:5px 0;}
 /********** Dashboard > */
 
 /* Address Book */
