--- a/app/design/frontend/default/rooja/template/checkout/onepage/payment.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/onepage/payment.phtml
@@ -51,7 +51,7 @@ var payment = new Payment('co-payment-form', '<?php echo $this->getUrl('checkout
         </span>
     </div>
 </div>
-
+<img src="<?php echo $this->getSkinUrl('images/veri.jpg'); ?>" alt="Security" id="secureLogos">
 <script type="text/javascript">
 //<![CDATA[
     function toggleToolTip(event){
