--- a/app/design/frontend/default/rooja/template/catalog/product/homepage.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/homepage.phtml
@@ -76,7 +76,10 @@ function timeBetweenNowAndDeadline($deadline) {
     else{$minutes = false;}
     $seconds = $seconds.'s'; // always be at least one second
 	
-	if($days==0 && $hours == 0){
+	if($days==0 && $hours == 0 && $minutes == 0){
+		return 0;
+	}
+	elseif($days==0 && $hours == 0){
 		return $minutes;
 	}
 	else{
@@ -101,6 +104,7 @@ foreach ($categories as $_category){
 				if (!$c->getSale_start_date() == null) {
 	                $startdate = date('y-m-d', strtotime($c->getSale_start_date())) . ' ' . $c->getSale_start_time() . ':00';
 					$enddate = date('y-m-d', strtotime($c->getSale_end_date())) . ' ' . $c->getSale_end_time() . ':00';
+					if(timeBetweenNowAndDeadline($enddate) != 0){
 					if (($enddate > $today && $enddate < $fivedays && $startdate < $today) || ($enddate > $today && $enddate > $fivedays && $startdate < $today)) {
 						if($i == 3){
 							?>
@@ -120,7 +124,7 @@ foreach ($categories as $_category){
                 <h2<?php if($i%2==1) echo " class='blackBg'"; ?>><?php echo $c->getName(); ?></h2>
 				<p>Sale ends in <?php echo timeBetweenNowAndDeadline($enddate); ?></p>
             </article>
-				<?php } $i++; }}}}}  }} ?>			
+				<?php } $i++; }}}}}}  }} ?>			
 
 
 <script type="text/javascript">
