--- a/app/design/frontend/default/rooja/template/customer/form/register.phtml
+++ b/app/design/frontend/default/rooja/template/customer/form/register.phtml
@@ -33,7 +33,12 @@
 ?>
 <script src="/js/jquery.defaultvalue.js" type="text/javascript"></script> 
 <script type="text/javascript">
+
 jQuery(function() {
+	var fadeDuration=2000;
+	var slideDuration=4000;
+	var currentIndex=1;
+	var nextIndex=1;
 	
 	jQuery('input[type="text"], input[type="password"]').defaultValue({
 		preferPlaceholder: true
