--- a/app/design/frontend/default/rooja/template/page/homepage.phtml
+++ b/app/design/frontend/default/rooja/template/page/homepage.phtml
@@ -113,7 +113,7 @@ if($_category->getId() !=5){
 					$enddate = date('y-m-d', strtotime($c->getSale_end_date())) . ' ' . $c->getSale_end_time() . ':00';
 
 					//var_dump($c);
-					
+					if(timeBetweenNowAndDeadline($enddate) != 0){
 					if ($enddate > $today && $enddate < $fivedays) {
 						if ($i % 2 == 0){
 						echo '<article class="saleDetails fl noMargin">';
@@ -128,7 +128,7 @@ if($_category->getId() !=5){
 					}
 				}
             }
-
+}
         }
 }
     }
