--- a/app/design/frontend/default/rooja/template/page/homepage.phtml
+++ b/app/design/frontend/default/rooja/template/page/homepage.phtml
@@ -54,7 +54,8 @@ if(!Mage::getSingleton('customer/session')->isLoggedIn() && ($agent !="facebooke
         	
         <?php
 		
-		$firstVisit =  Mage::getSingleton('core/session')->getFirstVisit();
+		$firstVisit =  $_GET['first']
+		echo $firstVisit;
 			
 					if($firstVisit!='visited'){
 					    Mage::getSingleton('core/session')->setFirstVisit('visited');
