--- a/app/design/frontend/default/rooja/template/page/homepage.phtml
+++ b/app/design/frontend/default/rooja/template/page/homepage.phtml
@@ -54,7 +54,7 @@ if(!Mage::getSingleton('customer/session')->isLoggedIn() && ($agent !="facebooke
         	
         <?php
 		
-		$firstVisit =  $_GET['first']
+		$firstVisit =  $_GET['first'];
 		echo $firstVisit;
 			
 					if($firstVisit!='visited'){
