--- a/app/design/frontend/default/rooja/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view.phtml
@@ -369,7 +369,11 @@ echo '<span>' . $likes = $xml->link_stat->like_count . '</span>';
 	<?php }else { ?>
 		var fbPriceJS = <?php echo $_product->getSpecialprice(); ?>;
 	<?php } ?>
-	var fbOffset = <?php echo $fbinc; ?>;
+	<?php if (!$fbinc == null) { ?>
+		var fbOffset = <?php echo $fbinc; ?>;
+	<?php }else { ?>
+		var fbOffset = 0;
+	<?php } ?>	
 	
 	FB.Event.subscribe('edge.create', function(response) {
             
