--- a/app/design/frontend/default/rooja/template/checkout/onepage.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/onepage.phtml
@@ -31,6 +31,16 @@
 
 	(function ($) {
 		$(document).ready(function(){
+			if ($("#s_method_freeshipping_freeshipping:checked").length > 0){ 
+				$("#checkoutStep2").show();
+			}
+			if ($("#s_method_flatrate_flatrate:checked").length > 0){ 
+				$("#checkoutStep2").show();
+			}
+			$("#s_method_freeshipping_freeshipping, #s_method_flatrate_flatrate").click(function() {
+				$("#checkoutStep2").show();
+			});
+			
 			if ($("#p_method_cashondelivery:checked").length > 0){ $("#hintText").html('We verify all Cash on Delivery orders over the phone after you have made a purchase and start processing the order. Our customer service team will contact you within 24 hours and alternatively you can call us at +91-11-45673347 to verify your order. Failing verification of the order will result in a cancellation. Failure to accept a verified order will revoke your Cash On Delivery privileges on future orders.');
 			$("#hintImg").html('<img src="<?php echo $this->getSkinUrl('images/cod.png'); ?>" alt="Security" id="secureLogos">'); }
 
