--- a/app/design/frontend/default/rooja/template/rewardsref/customer/referral/progress_bar.phtml
+++ b/app/design/frontend/default/rooja/template/rewardsref/customer/referral/progress_bar.phtml
@@ -17,7 +17,7 @@
 	<?php
 		if($referrerCount>0){
 		$groupId = Mage::getSingleton("customer/session")->getCustomerGroupId(); 
-		$this->setData('group_id', 5);
+		$this->setData('group_id', '5');
 		}
 	?>
   
