customer group check

--- a/app/design/frontend/default/rooja/template/rewardsref/customer/referral/progress_bar.phtml
+++ b/app/design/frontend/default/rooja/template/rewardsref/customer/referral/progress_bar.phtml
@@ -17,10 +17,11 @@
 	<?php
 		if($referrerCount>0){
 			$customer = Mage::getModel('customer/customer')->load($customerId);
-			if ($customer->getId()) {
-			    $customer->setData('group_id', 5);
+				
+				$vip = 5;
+			    $customer->setData('group_id', $vip);
 			    $customer->save(); 
-			}
+			
 		}
 	?>
   
