--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -304,6 +304,7 @@ li#myBag:hover{
 }
 
 #howClose{font-size:1.3em;color:#d68533;margin:5px 0 0;text-align:right;}
+#howClose span{color:#431F4C;}
 
 #topCart{height:auto;
     background:url(../images/bgs/black-diag.png) repeat top left;
