added coupon code

--- a/app/design/frontend/default/rooja/template/customer/account/dashboard.phtml
+++ b/app/design/frontend/default/rooja/template/customer/account/dashboard.phtml
@@ -32,6 +32,7 @@
         <h1>My Dashboard</h1>
     <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
     <?php echo $this->getChildHtml('hello') ?>
+	<?php echo $this->getChildHtml('progress_bar'); ?>
 	<?php echo $this->getChildHtml('recentorders') ?>
 
 <div class="half-col right">	
