added coupon code

--- a/app/design/frontend/default/rooja/template/rewardsref/customer/referral/progress_bar.phtml
+++ b/app/design/frontend/default/rooja/template/rewardsref/customer/referral/progress_bar.phtml
@@ -1,5 +1,7 @@
 
-    <?php $_referred = $this->getReferred();?>
+    <?php $_referred = $this->getReferred();
+		print_r($_referred);
+	?>
    
 <?php if($this->showHistory()): ?>
 <br/><br/>    
