--- a/app/design/frontend/default/rooja/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view.phtml
@@ -62,8 +62,10 @@ jQuery(function() {
 </script>
 <?php $categoryIds = $_product->getCategoryIds();
 //get parent id
-//echo Mage::getBlockSingleton('catalog/navigation')->getCurrentCategory()->parent_id;
-
+$boutique = false;
+$parentCat = Mage::getBlockSingleton('catalog/navigation')->getCurrentCategory()->parent_id;
+if($parentCat==5){$boutique = true;echo "boutique";}
+	
 if (!$categoryIds == null){
 	foreach($categoryIds as $categoryId) {
 		$currentcategory = Mage::getModel('catalog/category')->load($categoryId);
