--- a/app/design/frontend/default/rooja/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view.phtml
@@ -77,7 +77,7 @@ if (!$categoryIds == null){
 <?php if (!$categoryIds == null){
 	$enddate = strtotime(date('y-m-d', strtotime($currentcategory->getSale_end_date())) . ' ' . $currentcategory->getSale_end_time() . ':00');
 	$today = strtotime(date('y-m-d H:i:s'));
-	if ($enddate > $today && !$boutique) {
+	if ($enddate > $today && $boutique!=true) {
 		$expired = 1;
 	}
  }; ?>
