--- a/app/design/frontend/default/rooja/template/catalog/category/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/category/view.phtml
@@ -37,7 +37,7 @@
 	//get parent id
 	$boutique = 0;
 	$parentCat = Mage::getBlockSingleton('catalog/navigation')->getCurrentCategory()->parent_id;
-	if($parentCat==5){$boutique = 1;echo "boutique";}
+	if($parentCat==5){$boutique = 1;}
 	
     $_imgHtml   = '';
     if ($_imgUrl = $_category->getImageUrl()) {
@@ -67,7 +67,9 @@ $expired = 1;
 				if ($expired == 1) { 
 		echo '<p class="saleEnding">This sale ends ' . date('F jS \a\t g:ia', $enddate);
 		} else { 
-		echo '<p class="saleEnding">This sale has expired!</p>';
+			if($boutique==0{
+				echo '<p class="saleEnding">This sale has expired!</p>';
+			}
 		}
 		} ?>
 		<?php //var_export($_category); ?>
