--- a/app/design/frontend/default/rooja/template/catalog/product/list.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/list.phtml
@@ -56,7 +56,7 @@ echo '<span class="numLeft">'.$stock_count.'</span>';
 			
 			<a href="<?php echo $_product->getProductUrl() ?>"><img src="<?php echo $this->helper('catalog/image')->init($_product, 'small_image'); ?>" width="230" alt="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>" /></a>
 			<article class="productCore<?php if(!$_product->isSaleable()){ echo ' soldOut'; } ?>">
-				<span class="numLikes">
+				<?php if($boutique==0){ ?><span class="numLikes">
 				
 				<?php $source_url = $_product->getProductUrl();
 $url = "http://api.facebook.com/restserver.php?method=links.getStats&urls=".urlencode($source_url);
@@ -65,14 +65,14 @@ $xml = simplexml_load_string($xml);
 echo $likes = $xml->link_stat->like_count;
 ?>
 				
-				</span>
+				</span><?php } ?>
 				<p class="price"><span class="livePrice">
 				<?php if (!$fbprice == null) { ?>
 					<?php echo 'Rs. ' . number_format($fbprice, 2); } else { ?>
 					<?php echo 'Rs. ' . number_format($_product->getSpecialprice(), 2); } ?>
 				
 				</span><span> 
-				<?php if(!$_product->isSaleable()){ echo 'Sold Out'; } else { echo 'Rs. ' . number_format($_product->getPrice(), 2); } ?></span></p>
+				<?php if(!$_product->isSaleable()){ echo 'Sold Out'; } elseif($boutique==0) { echo 'Rs. ' . number_format($_product->getPrice(), 2); } ?></span></p>
 				<h2 class="productName"><?php echo $_helper->productAttribute($_product, $_product->getName(), 'name') ?></h2>
 			</article>
 		</article>
