--- a/app/design/frontend/default/rooja/template/catalog/product/list.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/list.phtml
@@ -35,7 +35,9 @@
 <?php
     $_productCollection=$this->addAttribute('rl_price')->getLoadedProductCollection();
     $_helper = $this->helper('catalog/output');
-	echo $boutique;
+	$boutique = 0;
+	$parentCat = Mage::getBlockSingleton('catalog/navigation')->getCurrentCategory()->parent_id;
+	if($parentCat==5){$boutique = 1;}
 ?> 
 <?php if(!$_productCollection->count()): ?>
 <section id="saleProducts" class="col3 fl">
