--- a/app/design/frontend/default/rooja/template/catalog/product/list.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/list.phtml
@@ -45,7 +45,7 @@
 <p class="note-msg"><?php echo $this->__('There are no products matching the selection.') ?></p>
 </section>
 <?php else: ?>
-<section id="saleProducts" class="col3 fl">
+<section id="saleProducts" class="col3 fl<?php if($boutique==1){echo ' boutiqueSale';}?>">
     <?php $i=1; foreach ($_productCollection as $_product): ?>
 	<?php $fbprice = $_helper->productAttribute($_product, $_product->getRl_price(), 'rl_price'); ?>
 	<?php //echo $fbprice; ?>
